tests/tools/trip/randomTrips/errors/fringe_factor_invalid/errors.tools
Error: --fringe-factor argument must be a float or 'max'
